--- a/source/rating-main-2.html
+++ b/source/rating-main-2.html
@@ -36,7 +36,7 @@
           <span
             class="rating-main__name rating-main__name--status">Статус:</span>
           <span
-            class="rating-main__text project-status project-status--orange">Подводятся
+            class="rating-main__text project-status status-color--orange">Подводятся
             итоги</span>
         </div>
         <div
@@ -380,7 +380,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -436,7 +436,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>1520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -486,7 +486,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -536,7 +536,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter liked"
                     type="button">
                     <span>520</span>
@@ -587,7 +587,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter liked"
                     type="button">
                     <span>520</span>
@@ -638,7 +638,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -688,7 +688,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -738,7 +738,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -788,7 +788,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -838,7 +838,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -888,7 +888,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter liked"
                     type="button">
                     <span>520</span>
@@ -939,7 +939,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -989,7 +989,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -1039,7 +1039,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
