--- a/source/rating-main-3.html
+++ b/source/rating-main-3.html
@@ -36,7 +36,7 @@
           <span
             class="rating-main__name rating-main__name--status">Статус:</span>
           <span
-            class="rating-main__text project-status project-status--orange">Подводятся
+            class="rating-main__text project-status status-color--orange">Подводятся
             итоги</span>
         </div>
         <div
@@ -357,7 +357,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container liked">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -413,7 +413,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>1520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -463,7 +463,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -513,7 +513,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter liked"
                     type="button">
                     <span>520</span>
@@ -564,7 +564,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter liked"
                     type="button">
                     <span>520</span>
@@ -615,7 +615,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -665,7 +665,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -715,7 +715,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -765,7 +765,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -815,7 +815,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -865,7 +865,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter liked"
                     type="button">
                     <span>520</span>
@@ -916,7 +916,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -966,7 +966,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -1016,7 +1016,7 @@
                     текст, служащий для временного наполнения макета в
                     публикациях</span>
                 </a>
-                <div class="rating-list__total">
+                <div class="rating-list__total js_likes_container">
                   <button class="button-like js-like-counter" type="button">
                     <span>520</span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
