--- a/source/rating-main.html
+++ b/source/rating-main.html
@@ -36,8 +36,7 @@
         <div class="rating-main__state-info rating-main__state-info--state">
           <span
             class="rating-main__name rating-main__name--status">Статус:</span>
-          <span
-            class="rating-main__text project-status project-status--blue">Идет
+          <span class="rating-main__text project-status status-color--blue">Идет
             прием
             проектов</span>
         </div>
@@ -109,7 +108,8 @@
                 <span>из</span>
                 <span class="rating-main__quantity">12</span>
               </div>
-              <span class="rating-main__hover-text">Количество проектов исчерпано</span>
+              <span class="rating-main__hover-text">Количество проектов
+                исчерпано</span>
             </div>
           </li>
           <li class="rating-main__item rating-main__item--service">
@@ -213,7 +213,8 @@
                 <span>из</span>
                 <span class="rating-main__quantity">12</span>
               </div>
-              <span class="rating-main__hover-text">Количество проектов исчерпано</span>
+              <span class="rating-main__hover-text">Количество проектов
+                исчерпано</span>
             </div>
           </li>
           <li class="rating-main__item rating-main__item--service">
@@ -306,7 +307,7 @@
                   текст, служащий для временного наполнения макета в
                   публикациях</a>
                 <span
-                  class="your-projects-list__inner-status project-status project-status--blue">Ожидает
+                  class="your-projects-list__inner-status project-status status-color--blue">Ожидает
                   модерации</span>
               </li>
               <li class="your-projects-list__inner-item">
@@ -316,7 +317,7 @@
                   наполнения макета в публикациях или производстве веб-сайтов,
                   пока финальный текст еще</a>
                 <span
-                  class="your-projects-list__inner-status project-status project-status--orange">Требует
+                  class="your-projects-list__inner-status project-status status-color--orange">Требует
                   доработки</span>
               </li>
             </ul>
@@ -338,7 +339,7 @@
                   известен
                   как текст- заполнитель или же текст-наполнитель</a>
                 <span
-                  class="your-projects-list__inner-status project-status project-status--green">Одобрено</span>
+                  class="your-projects-list__inner-status project-status status-color--green">Одобрено</span>
               </li>
               <li class="your-projects-list__inner-item">
                 <a class="your-projects-list__inner-link project-link"
@@ -347,7 +348,7 @@
                   текст, служащий для временного наполнения макета в
                   публикациях</a>
                 <span
-                  class="your-projects-list__inner-status project-status project-status--red">Отклонено</span>
+                  class="your-projects-list__inner-status project-status status-color--red">Отклонено</span>
               </li>
               <li class="your-projects-list__inner-item">
                 <a class="your-projects-list__inner-link project-link"
@@ -357,7 +358,7 @@
                   текста- заполнителя для макетов нечитабельность рыбных текстов
                   имеет особое значение</a>
                 <span
-                  class="your-projects-list__inner-status project-status project-status--green">Одобрено</span>
+                  class="your-projects-list__inner-status project-status status-color--green">Одобрено</span>
               </li>
             </ul>
           </li>
