--- a/source/single-rating-page.html
+++ b/source/single-rating-page.html
@@ -126,7 +126,7 @@
             </div>
 
             <div class="project-page__result">
-              <div class="project-page__result-button-wrap">
+              <div class="project-page__result-button-wrap js_likes_container">
                 <button
                   class="button-like button-like--bordered js-like-counter liked"
                   type="button">
