переделывает функцию загузки файлов

--- a/source/project-form.html
+++ b/source/project-form.html
@@ -113,9 +113,13 @@
             <p>Если необходимо, вы можете загрузить файлы. Максимум 5 файлов, формата DOCX, DOC, ODT, XODT, ODX, XODX.
             </p>
             <div class="file-uploads__wrapper js-upload-file-container">
-              <div class="file-uploads__preview-container"></div>
+              <div class="file-uploads__preview-container">
+                <div class="file-wrapper">
+                  <span>заявление ШПС1 Фащевка - Городище.docx</span>
+                </div>
+              </div>
               <input class="visually-hidden" type="file" name="user-files" id="user-files"
-                accept=".doc,.docx,.xml,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document" multiple>
+                accept=".doc,.docx,.xml,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document">
               <label for="user-files"><span>Загрузить файл</span></label>
             </div>
           </div>
