общие стили для блока description

--- a/source/project-form-2.html
+++ b/source/project-form-2.html
@@ -162,7 +162,7 @@
             <div class="file-uploads__wrapper js-upload-file-container">
               <div class="file-uploads__preview-container"></div>
               <input class="visually-hidden" type="file" name="user-files" id="user-files"
-                accept=".doc,.docx,.xml,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document" multiple>
+                accept=".doc,.docx,.xml,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document">
               <label for="user-files"><span>Загрузить файл</span></label>
             </div>
           </div>
