--- a/source/single-rating-page-3.html
+++ b/source/single-rating-page-3.html
@@ -282,18 +282,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -305,18 +294,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/2.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Самый известный текст-«рыба», называемый Lorem ipsum,
-                      имеет свои корни в 16-том веке. Lorem ipsum был создан
-                      на псевдо-латыни, которая приблизительно соответствует
-                      настоящей латыни. Этот текст содержит ряд настоящих
-                      латинских слов. Как и большинство других текстов, Lorem
-                      ipsum не имеет смысла, а лишь имитирует ритм большинства
-                      европейских языков использующих латиницу. Латинское
-                      происхождение и относительная бессмысленность текста
-                      Lorem ipsum хороши тем, что не привлекают к себе
-                      внимания и не отвлекают от дизайна.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -328,18 +306,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -351,18 +318,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/2.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Самый известный текст-«рыба», называемый Lorem ipsum,
-                      имеет свои корни в 16-том веке. Lorem ipsum был создан
-                      на псевдо-латыни, которая приблизительно соответствует
-                      настоящей латыни. Этот текст содержит ряд настоящих
-                      латинских слов. Как и большинство других текстов, Lorem
-                      ipsum не имеет смысла, а лишь имитирует ритм большинства
-                      европейских языков использующих латиницу. Латинское
-                      происхождение и относительная бессмысленность текста
-                      Lorem ipsum хороши тем, что не привлекают к себе
-                      внимания и не отвлекают от дизайна.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -374,18 +330,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -397,18 +342,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/2.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Самый известный текст-«рыба», называемый Lorem ipsum,
-                      имеет свои корни в 16-том веке. Lorem ipsum был создан
-                      на псевдо-латыни, которая приблизительно соответствует
-                      настоящей латыни. Этот текст содержит ряд настоящих
-                      латинских слов. Как и большинство других текстов, Lorem
-                      ipsum не имеет смысла, а лишь имитирует ритм большинства
-                      европейских языков использующих латиницу. Латинское
-                      происхождение и относительная бессмысленность текста
-                      Lorem ipsum хороши тем, что не привлекают к себе
-                      внимания и не отвлекают от дизайна.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
