--- a/source/proposal-page-approved.html
+++ b/source/proposal-page-approved.html
@@ -79,18 +79,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки">
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -102,18 +91,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки">
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -125,18 +103,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/2.jpg" alt="описание картинки">
-                    <figcaption class="gallery__item-text">
-                      Самый известный текст-«рыба», называемый Lorem ipsum,
-                      имеет свои корни в 16-том веке. Lorem ipsum был создан
-                      на псевдо-латыни, которая приблизительно соответствует
-                      настоящей латыни. Этот текст содержит ряд настоящих
-                      латинских слов. Как и большинство других текстов, Lorem
-                      ipsum не имеет смысла, а лишь имитирует ритм большинства
-                      европейских языков использующих латиницу. Латинское
-                      происхождение и относительная бессмысленность текста
-                      Lorem ipsum хороши тем, что не привлекают к себе
-                      внимания и не отвлекают от дизайна.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -147,18 +114,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки">
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -169,18 +125,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/2.jpg" alt="описание картинки">
-                    <figcaption class="gallery__item-text">
-                      Самый известный текст-«рыба», называемый Lorem ipsum,
-                      имеет свои корни в 16-том веке. Lorem ipsum был создан
-                      на псевдо-латыни, которая приблизительно соответствует
-                      настоящей латыни. Этот текст содержит ряд настоящих
-                      латинских слов. Как и большинство других текстов, Lorem
-                      ipsum не имеет смысла, а лишь имитирует ритм большинства
-                      европейских языков использующих латиницу. Латинское
-                      происхождение и относительная бессмысленность текста
-                      Lorem ipsum хороши тем, что не привлекают к себе
-                      внимания и не отвлекают от дизайна.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -191,18 +136,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки">
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -213,18 +147,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки">
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -235,18 +158,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки">
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
