--- a/source/single-rating-page.html
+++ b/source/single-rating-page.html
@@ -284,18 +284,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -307,18 +296,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/2.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Самый известный текст-«рыба», называемый Lorem ipsum,
-                      имеет свои корни в 16-том веке. Lorem ipsum был создан
-                      на псевдо-латыни, которая приблизительно соответствует
-                      настоящей латыни. Этот текст содержит ряд настоящих
-                      латинских слов. Как и большинство других текстов, Lorem
-                      ipsum не имеет смысла, а лишь имитирует ритм большинства
-                      европейских языков использующих латиницу. Латинское
-                      происхождение и относительная бессмысленность текста
-                      Lorem ipsum хороши тем, что не привлекают к себе
-                      внимания и не отвлекают от дизайна.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -330,18 +308,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -353,18 +320,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/2.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Самый известный текст-«рыба», называемый Lorem ipsum,
-                      имеет свои корни в 16-том веке. Lorem ipsum был создан
-                      на псевдо-латыни, которая приблизительно соответствует
-                      настоящей латыни. Этот текст содержит ряд настоящих
-                      латинских слов. Как и большинство других текстов, Lorem
-                      ipsum не имеет смысла, а лишь имитирует ритм большинства
-                      европейских языков использующих латиницу. Латинское
-                      происхождение и относительная бессмысленность текста
-                      Lorem ipsum хороши тем, что не привлекают к себе
-                      внимания и не отвлекают от дизайна.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -376,18 +332,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/1.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Описание, текст до 500 символов. Рыбным текстом
-                      называется текст, служащий для временного наполнения
-                      макета в публикациях или производстве веб-сайтов, пока
-                      финальный текст еще не создан. Рыбный текст также
-                      известен как текст- заполнитель или. Рыбные тексты также
-                      применяются для демонстрации различных видов шрифта и в
-                      разработке макетов. Как правило их содержание
-                      бессмысленно. По причине своей функции
-                      текста-заполнителя для макетов нечитабельность рыбных
-                      текстов имеет особое значение, во всех.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
@@ -399,18 +344,7 @@
                   <figure class="gallery__item">
                     <img width="135" height="135" class="gallery__item-img"
                       src="img/img-project/2.jpg" alt="описание картинки" />
-                    <figcaption class="gallery__item-text">
-                      Самый известный текст-«рыба», называемый Lorem ipsum,
-                      имеет свои корни в 16-том веке. Lorem ipsum был создан
-                      на псевдо-латыни, которая приблизительно соответствует
-                      настоящей латыни. Этот текст содержит ряд настоящих
-                      латинских слов. Как и большинство других текстов, Lorem
-                      ipsum не имеет смысла, а лишь имитирует ритм большинства
-                      европейских языков использующих латиницу. Латинское
-                      происхождение и относительная бессмысленность текста
-                      Lorem ipsum хороши тем, что не привлекают к себе
-                      внимания и не отвлекают от дизайна.
-                    </figcaption>
+                    <figcaption class="gallery__item-text"></figcaption>
                   </figure>
                 </a>
               </div>
