--- a/source/proposal-2-3.html
+++ b/source/proposal-2-3.html
@@ -7,53 +7,53 @@
 
     <include src="source/components/header.html"></include>
 
-    <main class="project-page page-content page-content--proposal">
+    <main>
 
       <div class="container">
-        <div class="info-banner info-banner--warning">
-          <svg
-            width="24"
-            height="24"
-            class="info-icon info-banner__icon"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-          >
-            <path
-              fill="currentColor"
-              fill-rule="evenodd"
-              d="M.2 12C.2 5.494 5.492.2 12 .2 18.505.2 23.8 5.494 23.8 12c0 6.506-5.294 11.8-11.8 11.8C5.492 23.8.2 18.506.2 12zm2.152 0c0 5.32 4.328 9.647 9.647 9.647 5.32 0 9.647-4.327 9.647-9.647S17.318 2.354 12 2.354 2.352 6.68 2.352 12z"
-              clip-rule="evenodd"
-            />
-            <rect
-              width="2.5"
-              height="8"
-              x="10.75"
-              y="6"
-              fill="currentColor"
-              rx="1"
-            />
-            <rect
-              width="2.5"
-              height="3"
-              x="10.75"
-              y="15"
-              fill="currentColor"
-              rx="1"
-            />
-          </svg>
-
-          <p class="info-banner__title">
-            Требует доработки
-          </p>
-
-          <p class="info-banner__text">
-            Внесите измнения согласно комментариям модератора.
-          </p>
-        </div>
         <section class="proposal">
-          <h1 class="proposal__title proposal__title--big page-title">Форма предложения по благоустройству территории</h1>
-          <a class="proposal__link link link--blue link--rules" href="#">
+          <div class="proposal__info info-banner info-banner--warning">
+            <svg
+              width="24"
+              height="24"
+              class="info-icon info-banner__icon"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="currentColor"
+                fill-rule="evenodd"
+                d="M.2 12C.2 5.494 5.492.2 12 .2 18.505.2 23.8 5.494 23.8 12c0 6.506-5.294 11.8-11.8 11.8C5.492 23.8.2 18.506.2 12zm2.152 0c0 5.32 4.328 9.647 9.647 9.647 5.32 0 9.647-4.327 9.647-9.647S17.318 2.354 12 2.354 2.352 6.68 2.352 12z"
+                clip-rule="evenodd"
+              />
+              <rect
+                width="2.5"
+                height="8"
+                x="10.75"
+                y="6"
+                fill="currentColor"
+                rx="1"
+              />
+              <rect
+                width="2.5"
+                height="3"
+                x="10.75"
+                y="15"
+                fill="currentColor"
+                rx="1"
+              />
+            </svg>
+
+            <p class="info-banner__title">
+              Требует доработки
+            </p>
+
+            <p class="info-banner__text">
+              Внесите измнения согласно комментариям модератора.
+            </p>
+          </div>
+          <h1 class="proposal__form-title page-title page-title--large">Форма предложения по благоустройству территории</h1>
+          <a class="proposal__rules link link--blue link--rules" href="#">
             <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none"
               viewBox="0 0 24 24">
               <path fill="currentColor" fill-rule="evenodd"
@@ -97,36 +97,29 @@
             </p>
           </div>
           <form action="#" class="proposal__form landscaping-form" id="js-improvement-form">
-            <div class="landscaping-form__section landscaping-form__section--description">
-              <h2 class="landscaping-form__title">
+            <div class="proposal__description description-block">
+              <h2 class="description-block__title">
                 Название и описание предложения
               </h2>
-              <div class="landscaping-form__textarea-container">
+              <div class="description-block__textarea-container">
                 <textarea name="proposition" id="proposition" cols="30" rows="10"
-                  class="landscaping-form__textarea landscaping-form__proposition-name"
-                  aria-label="Название предложения" required></textarea>
-                <span class="landscaping-form__textarea-error">Вы превысили лимит на хх символов</span>
+                  class="description-block__textarea description-block__proposition-name"
+                  aria-label="Название предложения"></textarea>
+                <span class="description-block__textarea-error">Вы превысили лимит на хх символов</span>
               </div>
-              <div class="landscaping-form__textarea-container">
+              <div class="description-block__textarea-container">
                 <textarea name="description" id="description" cols="30" rows="10"
-                  class="landscaping-form__textarea landscaping-form__description"
-                  aria-label="Описание предложения"
-                  required></textarea>
-                <span class="landscaping-form__textarea-error">Вы превысили лимит
+                  class="description-block__textarea description-block__description"
+                  aria-label="Описание предложения"></textarea>
+                <span class="description-block__textarea-error">Вы превысили лимит
                   на хх символов</span>
               </div>
             </div>
-            <div class="landscaping-form__section landscaping-form__section--upload image-uploads">
+            <div class="proposal__image-uploads image-uploads">
               <h2 class="subtitle">Загрузка изображений</h2>
               <p>Если необходимо, вы можете загрузить изображения. Максимум 5&nbsp;изображенний, формата JPEG, PNG, GIF.
               </p>
               <div class="image-uploads__wrapper js-upload-image-container">
-                <div class="image-uploads__image-wrapper">
-                  <img src="img/img-project/1.jpg" alt="Мое загруженное изображение">
-                </div>
-                <div class="image-uploads__image-wrapper">
-                  <img src="img/img-project/1.jpg" alt="Мое загруженное изображение">
-                </div>
                 <div class="image-uploads__image-wrapper">
                   <input class="visually-hidden" type="file" name="user-images"
                     accept="image/png, image/jpeg, image/jpg, image/gif" aria-label="user-images">
@@ -134,20 +127,20 @@
                 </div>
               </div>
             </div>
-            <div class="landscaping-form__section map-section">
+            <div class="proposal__map map-section">
               <h2 class="map-section__title">Карта</h2>
               <p class="map-section__tip">
                 Введите адрес проблемной территории или отметьте ее на карте
               </p>
               <input type="text" name="map-search" id="map-search" class="map-section__address"
                 placeholder="Адрес проблемной территории" aria-label="Введите адрес проблемной территории" />
-              <iframe
-                src="https://yandex.ru/map-widget/v1/?um=constructor%3A9cb3dfe5638344382497a81fa8472068b0dfbf25654b37a69d276c0dce8d2718&amp;source=constructor"
-                width="800" height="600" title="Карта"></iframe>
+                <input type="hidden" id="map-hidden" name="">
+                <input type="hidden" id="user-coords" name="" value="Россия,Ярославль">
+              <div id="map"></div>
             </div>
-            <div class="landscaping-form__button-wrapper">
-              <button class="button button--white">Отменить</button>
-              <button type="button" class="button button--blue landscaping-form__submit-btn" id="improvement-submit-btn">
+            <div class="proposal__buttons buttons-wrapper">
+              <button type="button" class="button button--white">Отменить</button>
+              <button type="button" class="buttons-wrapper__submit-btn button button--blue" id="improvement-submit-btn">
                 Отправить на модерацию
               </button>
             </div>
