--- a/source/proposal-1.html
+++ b/source/proposal-1.html
@@ -8,8 +8,8 @@
   <include src="source/components/header.html"></include>
 
   <main>
+    <div class="container container--desktop-only">
     <section class="proposal">
-      <div class="container">
         <h1 class="proposal__form-title page-title page-title--large">
           Форма предложения по благоустройству территории
         </h1>
@@ -88,8 +88,8 @@
             </div>
           </div>
         </form>
-      </div>
     </section>
+  </div>
   </main>
 
   <include src="source/components/footer.html"></include>
