--- a/source/proposal-4.html
+++ b/source/proposal-4.html
@@ -6,7 +6,7 @@
   <include src="source/components/special-popup.html"></include>
   <include src="source/components/header.html"></include>
   <main>
-    <div class="container">
+    <div class="container container--desktop-only">
       <section class="proposal proposal--aside">
         <div class="proposal__info info-banner info-banner--approved">
           <svg width="24" height="24" class="info-icon info-banner__icon"
