--- a/source/proposal-8.html
+++ b/source/proposal-8.html
@@ -6,7 +6,7 @@
   <include src="source/components/special-popup.html"></include>
   <include src="source/components/header.html"></include>
   <main>
-    <div class="container">
+    <div class="container container--desktop-only">
       <section class="proposal proposal--aside">
         <h1 class="proposal__title page-title">Рыбные тексты также применяются
           для демонстрации различных видов шрифта и
