--- a/source/hearings-2.html
+++ b/source/hearings-2.html
@@ -17,8 +17,8 @@
         <div class="hearings__status hearings-status hearings-status--blue">
           <p class="hearings-status__text">Статус обсуждений <span>Идет прием
               мненений</span></p>
-          <button class="button-star" type="button" data-tooltip="В избранное"
-            data-flow="down">
+          <button class="button-star js-button-favorive" type="button"
+            data-tooltip="В избранное" data-flow="down">
             <svg width="20" height="20" viewBox="0 0 20 20">
               <use xlink:href="img/sprite.svg#icon-star"></use>
             </svg>
