--- a/source/proposal-6-7.html
+++ b/source/proposal-6-7.html
@@ -131,7 +131,7 @@
                 aria-atomic="true"></span>
             </div>
           </div>
-          <div class="proposal__map map-section map-section--height">
+          <div class="proposal__map proposal__map--no-address map-section map-section--height">
             <h2 class="map-section__title subtitle subtitle--large">Карта проблемной территории</h2>
             <div class="proposal__address address-pin">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
