--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -51,6 +51,21 @@
                 checked>
               <label for="quality-no">Нет, не удовлетворен</label>
             </div>
+            <div class="form-radio">
+              <input type="radio" name="quality" id="quality-other" value="Другое"
+                data-id="other-radio">
+              <label for="quality-other">Другое</label>
+              <div class="description-block js-other-textarea hide">
+                <div class="description-block__textarea-container">
+                  <textarea name="proposition" id="proposition" cols="30"
+                    rows="10" placeholder="Ваш вариант ответа"
+                    class="description-block__textarea description-block__proposition-name"
+                    aria-label="Ваш вариант ответа"></textarea>
+                  <span class="description-block__textarea-error">Вы превысили
+                    лимит на хх символов</span>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="form__section">
             <p class="form__question">Знаете ли Вы о возможности получения
@@ -110,7 +125,7 @@
               <label for="interaction-6">Ничего этого не знаю</label>
             </div>
             <div class="form-checkbox">
-              <input data-id="other-input" type="checkbox" name="interaction-7"
+              <input data-id="other-checkbox" type="checkbox" name="interaction-7"
                 id="interaction-7" value="Другое">
               <label for="interaction-7">Другое</label>
 
@@ -249,7 +264,7 @@
                 органов</label>
             </div>
             <div class="form-checkbox">
-              <input data-id="other-input" type="checkbox" name="social-8"
+              <input data-id="other-checkbox" type="checkbox" name="social-8"
                 id="social-8" value="Другое">
               <label for="social-8">Другое</label>
 
