исправляет имя класса на главной

--- a/source/main-page.html
+++ b/source/main-page.html
@@ -1053,7 +1053,7 @@
     <section class="rating section">
       <div class="container">
         <div class="section__head">
-          <div class="section__tille-wrap">
+          <div class="section__title-wrap">
             <svg class="section__title-icon" width="30" height="32"
               viewBox="0 0 30 32" fill="none"
               xmlns="http://www.w3.org/2000/svg">
