добавляет в индекс страницу

--- a/source/index.html
+++ b/source/index.html
@@ -24,6 +24,10 @@
             недоступен</a>
         </li>
         <li>
+          <a href="service-unavailable-separated.html" target="_blank">Сервис
+            недоступен без внешних стилей</a>
+        </li>
+        <li>
           <a href="text-error.html" target="_blank">Ошибка текстовая</a>
         </li>
         <br />
