Рефакторит стили кнопки со звездочкой

--- a/source/category-lists.html
+++ b/source/category-lists.html
@@ -15,9 +15,11 @@
       <section class="rating-main__categories">
         <h2 class="rating-main__headline subtitle">Категории проектов</h2>
         <p>Класс у списка <b>category-list</b></p>
+        <p>Классу одной категории с исчерпанным количеством проектов добавлен
+          модификатор <b>category-list__item--is-done</b></p>
 
         <ul class="category-list js_short_list">
-          <li class="category-list__item">
+          <li class="category-list__item category-list__item--is-done">
             <a href="#" class="category-list__link">
               <div class="category-list__inner-wrap">
                 <span class="category-list__icon">
@@ -28,7 +30,6 @@
                 </span>
                 <span class="category-list__title">Муниципальные образовательные
                   учреждения</span>
-                <!-- <span class="category-list__title">Водоснабжение</span> -->
 
                 <span
                   class="category-list__hover-text category-list__hover-text--is-done">Количество
@@ -65,7 +66,7 @@
               </div>
             </a>
           </li>
-          <li class="category-list__item">
+          <li class="category-list__item category-list__item--is-done">
             <a href="#" class="category-list__link">
               <div class="category-list__inner-wrap">
                 <span class="category-list__icon">
@@ -265,7 +266,7 @@
               </div>
             </a>
           </li>
-          <li class="category-list__item">
+          <li class="category-list__item category-list__item--is-done">
             <a href="#" class="category-list__link">
               <div class="category-list__inner-wrap">
                 <span class="category-list__icon">
