--- a/source/rating-main.html
+++ b/source/rating-main.html
@@ -254,7 +254,7 @@
               </div>
             </a>
           </li>
-          <li class="category-list__item">
+          <li class="category-list__item category-list__item--is-done">
             <a href="#" class="category-list__link">
               <div class="category-list__inner-wrap">
                 <span class="category-list__icon">
