Вносит праки по баглисту

--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -52,8 +52,8 @@
               <label for="quality-no">Нет, не удовлетворен</label>
             </div>
             <div class="form-radio">
-              <input type="radio" name="quality" id="quality-other" value="Другое"
-                data-id="other-radio">
+              <input type="radio" name="quality" id="quality-other"
+                value="Другое" data-id="other-radio">
               <label for="quality-other">Другое</label>
               <div class="description-block js-other-textarea hide">
                 <div class="description-block__textarea-container">
@@ -125,8 +125,8 @@
               <label for="interaction-6">Ничего этого не знаю</label>
             </div>
             <div class="form-checkbox">
-              <input data-id="other-checkbox" type="checkbox" name="interaction-7"
-                id="interaction-7" value="Другое">
+              <input data-id="other-checkbox" type="checkbox"
+                name="interaction-7" id="interaction-7" value="Другое">
               <label for="interaction-7">Другое</label>
 
               <div class="description-block js-other-textarea hide">
@@ -150,7 +150,8 @@
                 <!-- <span>5</span> -->
                 <span>10</span>
               </div>
-              <div class="js-poll-range" id="poll-range"></div>
+              <div class="js-poll-range" id="poll-range">
+              </div>
               <div class="form-range__description">
                 <span>очень плохо</span>
                 <span>очень хорошо</span>
