--- a/source/main-page.html
+++ b/source/main-page.html
@@ -1085,7 +1085,7 @@
                   datetime="2020-11-20">20.11.2020</time>
               </span>
               <span
-                class="rating__status project-status project-status--blue">Идет
+                class="rating__status project-status status-color--blue">Идет
                 прием проектов</span>
             </div>
             <a href="#" class="rating__link project-link">Государственное
@@ -1134,7 +1134,7 @@
                   datetime="2020-11-20">20.11.2020</time>
               </span>
               <span
-                class="rating__status project-status project-status--blue">Рейтингование</span>
+                class="rating__status project-status status-color--blue">Рейтингование</span>
             </div>
             <a href="#" class="rating__link project-link">Государственное
               дошкольное образовательное учреждение Тульской области
@@ -1153,7 +1153,7 @@
                   datetime="2020-11-20">20.11.2020</time>
               </span>
               <span
-                class="rating__status project-status project-status--orange">Подводятся
+                class="rating__status project-status status-color--orange">Подводятся
                 итоги</span>
               <div class="join-indicator is-visible"
                 data-tooltip="Участие принято" data-flow="down">
@@ -1181,7 +1181,7 @@
                   datetime="2020-11-20">20.11.2020</time>
               </span>
               <span
-                class="rating__status project-status project-status--green">Итоги
+                class="rating__status project-status status-color--green">Итоги
                 подведены</span>
             </div>
             <a href="#" class="rating__link project-link">Государственное
