Выравнивает заголовоки на Главной

--- a/source/main-page.html
+++ b/source/main-page.html
@@ -597,12 +597,15 @@
     <section class="concurrent-voting section">
       <div class="container">
         <div class="concurrent-voting__head section__head">
-          <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="img/sprite.svg#icon-pages"></use>
-          </svg>
-          <h2 class="concurrent-voting__title section__title">Голосования
-            по&nbsp;проектам</h2>
+          <div class="section__title-wrap">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <use xlink:href="img/sprite.svg#icon-pages"></use>
+            </svg>
+            <h2 class="concurrent-voting__title section__title">Голосования
+              по&nbsp;проектам</h2>
+          </div>
+
           <a href="#"
             class="concurrent-voting__archive link-arrow link link--grey">
             <span>Архив <span
@@ -1225,11 +1228,13 @@
     <section class="improvement section">
       <div class="container">
         <div class="improvement__head section__head">
-          <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="img/sprite.svg#icon-improvement"></use>
-          </svg>
-          <h2 class="improvement__title section__title">Благоустройство</h2>
+          <div class="section__title-wrap">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <use xlink:href="img/sprite.svg#icon-improvement"></use>
+            </svg>
+            <h2 class="improvement__title section__title">Благоустройство</h2>
+          </div>
           <a href="#"
             class="improvement__archive-link link-arrow link link--grey">
             <span>Архив</span>
